Revert "Task list s2 dom"

--- a/source/site/frontend/css/settings.css
+++ b/source/site/frontend/css/settings.css
@@ -9,16 +9,15 @@ body {
 
 .tabs {
   position: absolute;
-  top: 20%;
-  left: 25%;
-  /* transform: translate(-20%, -50%); */
+  top: 50%;
+  left: 30%;
+  transform: translate(-20%, -50%);
   width: 1300px;
   height: 800px;
   padding: 30px 20px;
   background: #f5f5f5;
   box-shadow: 5px 5px 10px 5px #ccc;
   overflow: hidden;
-  z-index: 99;
 }
 
 .tabs .tab-header {
@@ -133,67 +132,460 @@ body {
 
 
 
-/* Toggle buttons Start*/
-.switch {
+/* Toggle buttons */
+.tgl {
+  display: none;
+}
+
+.tgl,
+.tgl::after,
+.tgl::before,
+.tgl *,
+.tgl *::after,
+.tgl *::before,
+.tgl + .tgl-btn {
+  box-sizing: border-box;
+}
+
+.tgl::selection,
+.tgl::after::selection,
+.tgl::before::selection,
+.tgl *::selection,
+.tgl *::after::selection,
+.tgl *::before::selection,
+.tgl + .tgl-btn::selection {
+  background: none;
+}
+
+.tgl + .tgl-btn {
+  outline: 0;
+  display: block;
+  width: 4em;
+  height: 2em;
   position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-/* Toggle buttons End*/
-
-
-/* The slider */
-.slider {
-  position: absolute;
   cursor: pointer;
+  user-select: none;
+}
+
+.tgl + .tgl-btn::after,
+.tgl + .tgl-btn::before {
+  position: relative;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+}
+
+.tgl + .tgl-btn::after {
+  left: 0;
+}
+
+.tgl + .tgl-btn::before {
+  display: none;
+}
+
+.tgl:checked + .tgl-btn::after {
+  left: 50%;
+}
+
+.tgl-light + .tgl-btn {
+  background: #f0f0f0;
+  border-radius: 2em;
+  padding: 2px;
+  transition: all 0.4s ease;
+  float: right;
+}
+
+.tgl-light + .tgl-btn::after {
+  border-radius: 50%;
+  background: #fff;
+  transition: all 0.2s ease;
+}
+
+.tgl-light:checked + .tgl-btn {
+  background: #9fd6ae;
+}
+
+
+
+
+/** Time Picker Style **/
+:root {
+  --font-size: 30px;
+  --default-line-height: 46px;
+  --default-height: 50px;
+  --default-border: 2px solid rgba(200, 200, 200, 0.5);
+  --dark-color: #08192d;
+  --focus-color: #0089a7;
+}
+
+/** time-picker-container start */
+.ios-time-picker-container {
+  position: relative;
+  width: 120px;
+  background: white;
+  border: var(--default-border);
+  border-radius: 5px;
+  height: var(--default-height);
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+
+.ios-time-picker-container::before {
+  content: ":";
+  position: absolute;
+  display: block;
+  width: 10px;
+  font-size: var(--font-size);
+  height: var(--default-height);
+  line-height: var(--default-line-height);
+  text-align: center;
+  line-height: var(--default-line-height);
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.ios-time-picker-container.is-dark {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.ios-time-picker-container.is-focus {
+  color: var(--focus-color);
+  border-color: var(--focus-color);
+}
+
+/** time-picker-container end */
+
+/** time-picker-text start */
+.ios-time-picker-container.is-focus .ios-time-picker-text {
+  opacity: 0;
+  z-index: 9;
+}
+
+.ios-time-picker-container.is-inserting .ios-time-picker-text {
+  opacity: 1;
+  z-index: 9;
+}
+
+.ios-time-picker-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  font-size: var(--font-size);
+  line-height: var(--default-line-height);
+  display: flex;
+}
+
+.ios-time-picker-text > div {
+  width: 50%;
+  text-align: right;
+  padding: 1px 12px 0 0;
+}
+
+/** time-picker-text end */
+
+/** time-picker-scroller start */
+.ios-time-picker-container.is-focus .ios-time-picker-scroller {
+  opacity: 1;
+  z-index: 9;
+}
+
+.ios-time-picker-container.is-inserting .ios-time-picker-scroller,
+.ios-time-picker-scroller {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  padding-top: 9px;
+  opacity: 0;
+  z-index: 0;
+}
+
+.ios-time-picker-scroller::before,
+.ios-time-picker-scroller::after {
+  content: '';
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  z-index: 3;
+}
+
+.ios-time-picker-scroller::before {
+  top: 0;
+  background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.ios-time-picker-scroller::after {
+  bottom: 0;
+  background: -moz-linear-gradient(0deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.ios-time-picker-container.is-dark .ios-time-picker-scroller::before {
+  background: -moz-linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.ios-time-picker-container.is-dark .ios-time-picker-scroller::after {
+  background: -moz-linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.ios-time-picker-slider {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 9px 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.ios-time-picker-slider.is-disabled {
+  overflow: hidden;
+  filter: grayscale(100);
+}
+
+.ios-time-picker-slider::-webkit-scrollbar {
+  display: none;
+}
+
+.ios-time-picker-slider + .ios-time-picker-slider {
+  left: 50%;
+}
+
+.ios-time-picker-slider .ios-time-picker-slide {
+  font-size: var(--font-size);
+  text-align: center;
+  height: 30px;
+  line-height: 30px;
+}
+
+/** time-picker-scroller end */
+
+/** time-picker-input start */
+.ios-time-picker {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  font-size: var(--font-size);
+  line-height: var(--default-height);
+  text-align: center;
+  cursor: pointer;
+  border: 0;
+  opacity: 0;
+  z-index: 9;
+  padding: 0;
+}
+
+/** time-picker-input end */
+
+.ctrl {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 1px solid #d5dce6;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 30px;
+}
+
+.ctrl-counter {
+  position: relative;
+  width: 60px;
+  height: 30px;
+  color: #333c48;
+  text-align: center;
+  overflow: hidden;
+}
+
+.ctrl-counter.is-input .ctrl-counter-num {
+  opacity: 0;
+  -webkit-transition: opacity 100ms ease-in;
+  transition: opacity 100ms ease-in;
+}
+
+.ctrl-counter.is-input .ctrl-counter-input {
+  opacity: 1;
+  -webkit-transition: opacity 100ms ease-in;
+  transition: opacity 100ms ease-in;
+}
+
+.ctrl-counter-input {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  z-index: 2;
+  box-shadow: none;
+  outline: none;
+  border: none;
+  color: #333c48;
+  font-size: 30px;
+  line-height: 50px;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: opacity 100ms ease-in;
+  transition: opacity 100ms ease-in;
+}
+
+.ctrl-counter-num {
+  position: absolute;
+  z-index: 1;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  line-height: 30px;
+  opacity: 1;
+  -webkit-transition: opacity 100ms ease-in;
+  transition: opacity 100ms ease-in;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+.ctrl-counter-num.is-increment-hide {
+  opacity: 0;
+  -webkit-transform: translateY(-50px);
+  transform: translateY(-50px);
+  -webkit-animation: increment-prev 100ms ease-in;
+  animation: increment-prev 100ms ease-in;
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+.ctrl-counter-num.is-increment-visible {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  -webkit-animation: increment-next 100ms ease-out;
+  animation: increment-next 100ms ease-out;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+.ctrl-counter-num.is-decrement-hide {
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+  transform: translateY(50px);
+  -webkit-animation: decrement-prev 100ms ease-in;
+  animation: decrement-prev 100ms ease-in;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.ctrl-counter-num.is-decrement-visible {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  -webkit-animation: decrement-next 100ms ease-out;
+  animation: decrement-next 100ms ease-out;
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
+.ctrl-button {
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  background-color: #8498a7;
+  -webkit-transition: background-color 100ms ease-in;
+  transition: background-color 100ms ease-in;
 }
 
-.slider.round:before {
-  border-radius: 50%;
+.ctrl-button:hover {
+  background-color: #90a2b0;
+  -webkit-transition: background-color 100ms ease-in;
+  transition: background-color 100ms ease-in;
+}
+
+.ctrl-button:active {
+  background-color: #778996;
+  -webkit-transition: background-color 100ms ease-in;
+  transition: background-color 100ms ease-in;
+}
+
+.ctrl-button-decrement {
+  border-radius: 5px 0 0 5px;
+}
+
+.ctrl-button-increment {
+  border-radius: 0 5px 5px 0;
+}
+
+@-webkit-keyframes decrement-prev {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes decrement-prev {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes decrement-next {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+    transform: translateY(-50px);
+  }
+}
+
+@keyframes decrement-next {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+    transform: translateY(-50px);
+  }
+}
+
+@-webkit-keyframes increment-prev {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes increment-prev {
+  from {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes increment-next {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+  }
+}
+
+@keyframes increment-next {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+  }
 }
