--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -20,12 +20,12 @@
   <ul class="side-bar-division" id="finished"></ul>
 
 
-  <button
+  <!-- <button
     type="button"
     id="fold-button"
     onclick="transition(window.current_state,timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')"
   >
     Extend
-  </button>
+  </button> -->
   <p id="curr_task_information">There is no task in running.</p>
 </div>
