fixed state machine implementation

--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/settings.css">
-<button onclick="transition(window.current_state, 'timer_init')">Close</button>
+<button onclick="transition(window.statelet, 'timer_init')">Close</button>
 <div class="tabs">
     <div class="tab-header">
         <div class="active">
