5. Change background to one in dom branch

--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -1,5 +1,5 @@
 html {
-  background: url("/assets/images/web-background.png") no-repeat center center fixed;
+  background: url("/assets/images/web-background.jpg") no-repeat center center fixed;
   background-color: #4a707a;
   background-size: cover;
 }
