--- a/source/site/frontend/css/timer-display.css
+++ b/source/site/frontend/css/timer-display.css
@@ -1,8 +1,9 @@
 #timer-container {
-  background: #c5d1dd;
+  /*background: #c5d1dd;*/
+  background: #d4f3f8;
   box-sizing: border-box;
   border: 3px solid black;
-  opacity: .75;
+  opacity: .8;
   border-radius: 30px;
   /* box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px; */
   margin: 2vh auto;
