--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -63,18 +63,18 @@ footer {
 #timer-label {
   text-align: center;
   font-size: 20px;
-  color: whitesmoke;
+  color: #d4f3f8;
 }
 
 .task {
   border: 2px solid black;
   margin: 40px 0 20px;
-  padding: 0 12px;
+  padding: 0 1vh 1vh 1vh;
   border-radius: 4px;
   text-align: center;
   font-size: 22px;
   height: 55px;
-  width: 200px;
+  width: fit-content;
   background-color: rgba(230, 230, 230, 0.5);
 }
 
