Add empty light mode/dark mode buttons for backgrounds to be inputted later

--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 html {
   background: url("/assets/images/web-background.jpg") no-repeat center center fixed;
   background-color: #4a707a;
