--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -18,9 +18,9 @@
 
         <div class="tabcontent active">
             <div class="cover-contianer">
-                <button type="button" style="align-self:center;">
+                <button id="light-mode-button" type="button" style="align-self:center;">
                     <img src="/assets/settings/light.png" style="height: 100px;"></button>
-                <button type="button" style="align-self:center;">
+                <button id="dark-mode-button" type="button" style="align-self:center;">
                     <img src="/assets/settings/dark.png" style="height: 100px;"></button>
             </div>
             <div class="option-list">
