Add Alarm Sound

--- a/source/site/frontend/html/components/timer-display.html
+++ b/source/site/frontend/html/components/timer-display.html
@@ -2,4 +2,4 @@
 <div id="timer-container">
     <p id="timer-string">00:10</p>
 </div>
-<audio id="alarm-sound" src="../assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio>
+<audio id="alarm-sound" src="../assets/audio/Alarm_Clock___Sound_Effect___No_Copyright_HQ_320_kbps_mp3cut.net.mp3"></audio>
