--- a/source/site/frontend/html/components/task.html
+++ b/source/site/frontend/html/components/task.html
@@ -6,8 +6,11 @@
   <div class="order-btn-container">
     <button class="pomo-delete-btn" id="pomo-delete-btn">x</button>
     <button class="pomo-edit-btn" id="pomo-edit-btn">e</button>
-    <button class="order-btn" id="order-btn-up">^</button>
-    <button class="order-btn" id="order-btn-down">v</button>
+    <div class="position-btn-container">
+      <button class="order-btn" id="order-btn-up">^</button>
+      <button class="order-btn" id="order-btn-down">v</button>
+    </div>
+    
     <p class="pomo-counter" style="display: none"></p>
   </div>
 </div>
