updates for issue 72 73 75

--- a/source/site/frontend/html/components/task.html
+++ b/source/site/frontend/html/components/task.html
@@ -11,14 +11,14 @@
       <button class="order-btn" id="order-btn-down">v</button>
     </div>
     
-    <p class="pomo-counter" style="display: none"></p>
+    <p class="pomo-counter" id="actual-pomo-counter" style="display: none"></p>
   </div>
 </div>
 
 <div id="edit" class="task-container">
   <!-- Edit Mode -->
-  <input class="task" id="task-edit" type="text" />
-  <input class="pomo-counter" id="pomo-counter-edit" type="number" />
+  <input class="task" id="task-edit" type="text" value="Please enter a task"/>
+  <input class="pomo-counter" id="pomo-counter-edit" type="number" value="1" />
   <button class="pomo-confirm-btn" id="pomo-confirm-btn">Confirm</button>
   <button class="pomo-cancel-btn" id="pomo-cancel-btn">Cancel</button>
 </div>
