Add skeleton for Help button and Help tab in settings

--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -83,6 +83,11 @@ footer {
   background-color: rgba(230, 230, 230, 0.5);
 }
 
+.help {
+  margin-left: auto;
+  margin-right: 1vh;
+}
+
 #current-task {
   display: inline-block;
 }
