--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -9,6 +9,9 @@
             <i class="timer-tab"></i> Timer
         </div>
         <div>
+            <i class="help-tab"></i> Help
+        </div>
+        <div>
             <i class="about-tab"></i> About
         </div>
     </div>
@@ -68,6 +71,14 @@
                         <input type="number" id="long-break-min" min="0" max="60">
                     </div>
                 </div>
+            </div>
+        </div>
+
+        
+        <div class="tabcontent">
+            <div class="cover-contianer">
+                <!-- TODO: Type up instructions -->
+                <h3>Help lol</h3>
             </div>
         </div>
         
