--- a/source/site/frontend/html/components/modal.html
+++ b/source/site/frontend/html/components/modal.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="/css/modal.css">
 <div class="modal" id="modal-popup">
     <div class="modal-content">
