--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="/css/task-list.css" />
 <div class="side-bar" id="side-bar">
   <h2 class="side-bar-header" id="task-list-header">Task list</h2>
@@ -25,5 +26,5 @@
     <ul class="side-bar-division" id="finished"></ul>
   </div>
 
-  <p id="curr_task_information">There is no task in running.</p>
+  <p id="curr-task-information">There is no task in running.</p>
 </div>
