--- a/source/site/frontend/html/components/timer-display.html
+++ b/source/site/frontend/html/components/timer-display.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="/css/timer-display.css">
 <div id="timer-container">
     <p id="timer-string">00:10</p>
