--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <link rel="stylesheet" href="/css/settings.css">
 <button class="settings-close" onclick="transition(window.statelet, 'timer_init')">Close</button>
 <div class="tabs">
@@ -22,9 +23,9 @@
         <div class="tabcontent active">
             <div class="cover-contianer">
                 <button id="light-mode-button" type="button" style="align-self:center;">
-                    <img src="/assets/settings/light.png" style="height: 100px;"></button>
+                    <img src="/assets/settings/light.png" alt="light mode example" style="height: 100px;"></button>
                 <button id="dark-mode-button" type="button" style="align-self:center;">
-                    <img src="/assets/settings/dark.png" style="height: 100px;"></button>
+                    <img src="/assets/settings/dark.png" alt="dark mode example" style="height: 100px;"></button>
             </div>
             <div class="option-list">
 
