--- a/source/site/frontend/html/components/task.html
+++ b/source/site/frontend/html/components/task.html
@@ -5,8 +5,8 @@
   <p class="task" id="task-view">undefined</p>
   <p class="pomo-counter" id="pomo-counter-view">undefined</p>
   <div class="order-btn-container">
-    <button class="pomo-delete-btn" id="pomo-delete-btn">x</button>
-    <button class="pomo-edit-btn" id="pomo-edit-btn">e</button>
+    <button class="pomo-delete-btn" id="pomo-delete-btn"><img src="../../assets/images/delete.png" alt="Delete Button" class="button-icon"></button>
+    <button class="pomo-edit-btn" id="pomo-edit-btn"><img src="../../assets/images/edit.png" alt="Edit Button" class="button-icon"></button>
     <div class="position-btn-container">
       <button class="order-btn" id="order-btn-up">^</button>
       <button class="order-btn" id="order-btn-down">v</button>
