add localstorage option

--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/css/settings.css">
-<button class="settings-close" onclick="transition(window.statelet, 'timer_init')">Close</button>
+<button class="settings-close" onclick="transition(window.statelet(), 'timer_init')">Close</button>
 <div class="tabs">
     <div class="tab-header">
         <div class="active">
